close-to-perfection sonar qube fixes